fixed banner display on mobile and desktop

--- a/public/css/Home.module.scss
+++ b/public/css/Home.module.scss
@@ -86,6 +86,16 @@
       margin-top: 2rem;
       cursor: pointer;
       padding: unset;
+      & img {
+        transition: transform 0.2s;
+        transform: scale(1.3);
+      }
+
+      @include minScreen("inbetween") {
+        & img {
+          transform: scale(1);
+        }
+      }
     }
 
     .featured {
